# rust-android

./: CLI_PLANEJAMENTO.md  COMO_FUNCIONA.md  Cargo.toml  GEMINI.md  JNI_INTEGRATION.md  JORNADA.md  Makefile  README.md  SDK_PLANEJAMENTO.md  release.keystore
crates/android-async/: Cargo.toml
crates/android-async/src/: lib.rs
crates/android-battery/: Cargo.toml
crates/android-battery/src/: lib.rs
crates/android-haptics/: Cargo.toml
crates/android-haptics/src/: lib.rs
crates/android-jni-bridge/: Cargo.toml
crates/android-jni-bridge/src/: lib.rs
crates/android-network/: Cargo.toml
crates/android-network/src/: lib.rs
crates/android-notifications/: Cargo.toml
crates/android-notifications/src/: lib.rs
crates/android-permissions/: Cargo.toml
crates/android-permissions/src/: lib.rs
crates/android-push/: Cargo.toml
crates/android-push/src/: lib.rs
crates/android-sensors/: Cargo.toml
crates/android-sensors/src/: lib.rs
crates/android-workmanager/: Cargo.toml
crates/android-workmanager/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
docs/: DOCS_RESOURCES.md  JORNADA.md
patches/iced_winit/src/: conversion.rs  lib.rs  program.rs
src/: lib.rs
